--- a/Qns&Anwrs/simple_if.ipynb
+++ b/Qns&Anwrs/simple_if.ipynb
@@ -1640,16 +1640,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is list and first and last values should be integer if condition is satisfied ,perform first value true division by 3 and last value perform bitwise not, result store in sa,e position in the given list or else to perform length of collection power 2  and display"
+    "WAP to check whether a given value is list and first and last values should be integer if condition is satisfied ,perform first value true division by 3 and last value perform bitwise not, result store in same position in the given list or else to perform length of collection power 2  and display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.0, 'adf', [44, 33], {454, 'dfs'}, -56]\n"
+     ]
+    }
+   ],
    "source": [
-    "a"
+    "a=[9,'adf',[44,33],{'dfs',454},55]\n",
+    "if type(a)==list and type(a[0])==int and type(a[-1])==int:\n",
+    "    a[0]=a[0]/3\n",
+    "    a[-1]=~a[-1]\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(len(a)**2)"
    ]
   }
  ],
