--- a/Qns&Anwrs/conditional_if_else.ipynb
+++ b/Qns&Anwrs/conditional_if_else.ipynb
@@ -877,16 +877,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given year is a leap year or not. if leap year, print leap \n",
+    "30.WAP to check whether a given year is a leap year or not. if leap year, print leap \n",
     "year or else not a leap year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "leap year\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=2032\n",
+    "if a%4==0:\n",
+    "    print('leap year')\n",
+    "else:\n",
+    "    print('not a leap year')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to find out the greatest of two numbers and display the greatest number. if \n",
+    "31.WAP to find out the greatest of two numbers and display the greatest number. if \n",
     "the greatest number, display the greatest message with value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greater number 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=44;b=55\n",
+    "if a>b:\n",
+    "    print(f'greater number {a}')\n",
+    "else:\n",
+    "    print(f'greater number {b}')"
    ]
   },
   {
@@ -899,12 +941,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value is available\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[33,44,'str','dfs',99]\n",
+    "if 44 in a:\n",
+    "    print('value is available')\n",
+    "else:\n",
+    "    print('value not present')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "WAP whether a given string, if string length is more than 2, then it displays a new \n",
     "string with the first and last characters switched, otherwise the display the 3 \n",
     "copies of given string.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gtrins\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='string'\n",
+    "if type(a)==str and len(a)>2:\n",
+    "    b=a[-1]+a[1:-1]+a[0]\n",
+    "    print(b)\n",
+    "else:\n",
+    "    print(a*3)"
    ]
   },
   {
