--- a/Qns&Anwrs/conditional_if_else.ipynb
+++ b/Qns&Anwrs/conditional_if_else.ipynb
@@ -1211,6 +1211,32 @@
     "If it is an integer, concatenate these two lists or else print the memory \n",
     "address of these two lists."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gfkfhgf\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=66\n",
+    "if type(a) in (int,float,bytes,complex):\n",
+    "    print('gfkfhgf')\n"
+   ]
   }
  ],
  "metadata": {
