--- a/Qns&Anwrs/practice.ipynb
+++ b/Qns&Anwrs/practice.ipynb
@@ -2453,6 +2453,158 @@
    "source": [
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if value is even and divisible by 4 display cube of the value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=4\n",
+    "if a%2==0 and a%4==0:\n",
+    "    print(a**3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wap to reverse the given string if len of string is even concate new sting from middle of the given string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gnihairts\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='string'\n",
+    "\n",
+    "if len(a)%2==0:\n",
+    "    a=a[::-1]\n",
+    "    a=a[0:len(a)//2]+'hai'+a[len(a)//2:]\n",
+    "    print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "if the given value present b/w ascii value print ascii charecter else find given value is even or odd\n",
+    ", if even display number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd number s\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='s'\n",
+    "if '0'<=a<='9':\n",
+    "    print(a)\n",
+    "elif ord(a)%2==0:\n",
+    "    print(f'even number {a}')\n",
+    "elif ord(a)%2!=0:\n",
+    "    print(f'odd number {a}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the given values is upper case\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    " #wap wheather the character is upper case or lower case if uppercase convert it into lower case,\n",
+    "#check weather first and last characters are in sequence or not if the both are in sequence swap the first and last character\n",
+    "# if both are not in sequence the last char should be converted to sequence of first character\n",
+    "\n",
+    "a='A'\n",
+    "if 'A'<=a<='Z':\n",
+    "    res=chr(ord(a)+32)\n",
+    "    print('the given values is upper case')\n",
+    "    print(res)\n",
+    "\n",
+    "elif 'a'<=a<='z':\n",
+    "    res=chr(ord(a)-32)\n",
+    "    print('given values is lower case')\n",
+    "    print(res)\n",
+    "\n",
+    "else :\n",
+    "    print(\"invalid\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bjaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check weather first and last characters are in sequence or not if the both are in sequence swap the first and last character\n",
+    "# if both are not in sequence the last char should be converted to sequence of first character\n",
+    "\n",
+    "a='ajab'\n",
+    "if ord(a[0])==ord(a[-1])-1:\n",
+    "    res=a[-1]+a[1:-1]+a[0]\n",
+    "    print(res)\n",
+    "    \n",
+    "elif ord(a[0])!=ord(a[-1])-1:\n",
+    "    res=a[0:-1]+chr(ord(a[0])+1)\n",
+    "    print(res)\n",
+    "\n",
+    "   \n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
