--- a/Qns&Anwrs/conditional_if_else.ipynb
+++ b/Qns&Anwrs/conditional_if_else.ipynb
@@ -306,7 +306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the given number is divisible by 3 or not if yes, print the \n",
+    "11.WAP to check whether the given number is divisible by 3 or not if yes, print the \n",
     "number or else print the cube of the numbers."
    ]
   },
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the given input is divisible by 3 and 5. If yes print the \n",
+    "12.WAP to check whether the given input is divisible by 3 and 5. If yes print the \n",
     "actual number or else print string of that number."
    ]
   },
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the given number lies between 1 to 19, if it is true square \n",
+    "13.WAP to check whether the given number lies between 1 to 19, if it is true square \n",
     "that number or else false cube that number and display the number."
    ]
   },
@@ -395,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the student has passed or failed. If the student got more \n",
+    "14.WAP to check whether the student has passed or failed. If the student got more \n",
     "than 40 marks, print ‘PASS’ along with those marks, if it is not printed ‘FAIL’ along \n",
     "with those marks."
    ]
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is even and in range of 47 to 58 and not in 0 \n",
+    "15.WAP to check whether a given value is even and in range of 47 to 58 and not in 0 \n",
     "or odd. if condition is True, to perform display the ascii character. or else to \n",
     "perform floor division with 5 and display it."
    ]
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is less than 125 and in between 47 to 125 or \n",
+    "16.WAP to check whether a given value is less than 125 and in between 47 to 125 or \n",
     "not. if condition is True, to perform store the given value as key and value as a \n",
     "character into the dict or else to append the value in list and display it.\n"
    ]
@@ -935,7 +935,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the given value is present inside the given collection or \n",
+    "32.WAP to check whether the given value is present inside the given collection or \n",
     "not.if value is present, display the value is available or else the value is not \n",
     "present."
    ]
@@ -965,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP whether a given string, if string length is more than 2, then it displays a new \n",
+    "33.WAP whether a given string, if string length is more than 2, then it displays a new \n",
     "string with the first and last characters switched, otherwise the display the 3 \n",
     "copies of given string.\n"
    ]
@@ -996,7 +996,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is a list and first and last values should be \n",
+    "34.WAP to check whether a given value is a list and first and last values should be \n",
     "integer if condition is satisfied first value is True division by 3 and perform the \n",
     "bitwise not for last value and those result values are stored in same positions in \n",
     "given list or else, to perform length of the collection power by 2 and display \n",
@@ -1004,73 +1004,254 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.333333333333333, 'sdf', 'sfkf', -45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[22,'sdf','sfkf',44]\n",
+    "if type(a)==list and type(a[0])==int==type(a[-1]):\n",
+    "    a[0]=a[0]/3\n",
+    "    a[-1]=~a[-1]\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(len(a)**2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is a string or not and length of the value \n",
+    "35.WAP to check whether a given value is a string or not and length of the value \n",
     "should be more than 7, if condition is satisfied to append the new string in the \n",
     "middle of the given string or else to perform the replications with 3 and display \n",
     "the result."
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ssssimrantring\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='sssstring'\n",
+    "if type(a)==str and len(a)>7:\n",
+    "    a=a[0:len(a)//2]+'imran'+a[len(a)//2:]\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(a*3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check if the given string of first and second character should be sequence \n",
+    "36.WAP to check if the given string of first and second character should be sequence \n",
     "or not. if the sequence prints the first, second and last two characters, or else the \n",
     "first half string is reversed and the remaining half string should be normal and \n",
     "display it. "
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ijan\n"
+     ]
+    }
+   ],
+   "source": [
+    "a='ijkfhan'\n",
+    "if ord(a[0])==ord(a[1])-1:\n",
+    "    a=a[0:2]+a[len(a)-2:]\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(a[len(a)//2::-1]+a[len(a)//2:])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given value is present inside the collection or not. If \n",
+    "37.WAP to check  whether a given value is present inside the collection or not. If \n",
     "present, print the value or else print value is not found."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
    "source": [
-    "WAP to check whether a given key is present in the dict or not. if key is present: \n",
-    "display the value or else add key and new value inside the dict.\n"
+    "a=(33,22,99)\n",
+    "if 33 in a:\n",
+    "    print(33)\n",
+    "else:\n",
+    "    print('value not found')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given collection is set or not. if set, append the new \n",
+    "38.WAP to check whether a given key is present in the dict or not. if key is present: \n",
+    "display the value or else add key and new value inside the dict.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'st': 33, '44': 44, '22': 22, '99': 99}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={'st':33,'44':44,'22':22}\n",
+    "if '4' in a:\n",
+    "    print(a['44'])\n",
+    "else:\n",
+    "    a['99']=99\n",
+    "    print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "39.WAP to check whether a given collection is set or not. if set, append the new \n",
     "value, or else eliminate the duplicate values in collection. final results should be \n",
     "set type.\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{33, 99, 88, 11, 44}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a={33,44,44,99,11}\n",
+    "if type(a)==set:\n",
+    "    a|={88}\n",
+    "    print(a)\n",
+    "else:\n",
+    "    print(set(a))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to read the age of a candidate and determine whether it is eligible for \n",
+    "40.WAP to read the age of a candidate and determine whether it is eligible for \n",
     "his/her own vote or not.it eligible print age and eligible messages or else print \n",
     "not eligible.\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age 20 eligible for vote\n"
+     ]
+    }
+   ],
    "source": [
-    "WAP to check whether a given value is even and in between 47 to 58 and not in \n",
-    "0 or odd. if condition is True, to perform display the ascii character or else to \n",
-    "perform floor division with 5 and display it.\n"
+    "age=20\n",
+    "if age>=18:\n",
+    "    print(f'Age {age} eligible for vote')\n",
+    "else:\n",
+    "    print('not eligible for vote')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the given string is palindrome or not if it is a palindrome \n",
+    "41.WAP to check whether a given value is even and in between 47 to 58 and not in \n",
+    "0 or odd. if condition is True, to perform display the ascii character or else to \n",
+    "perform floor division with 5 and display it.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=56\n",
+    "if a%2==0 and 47<a<58:\n",
+    "    print(chr(a))\n",
+    "else:\n",
+    "    print(a//5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "42.WAP to check whether the given string is palindrome or not if it is a palindrome \n",
     "string palindrome along with the string if it is not a palindrome print not \n",
     "palindrome\n"
    ]
@@ -1079,7 +1260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given number is palindrome or not. If palindrome, \n",
+    "43.WAP to check whether a given number is palindrome or not. If palindrome, \n",
     "display the given value as a palindrome or else not a palindrome."
    ]
   },
@@ -1087,7 +1268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check length of both string collections are equal or not. if both are equal \n",
+    "44.WAP to check length of both string collections are equal or not. if both are equal \n",
     "print the concat the two strings and display, or else if any one of the collection \n",
     "not equal print both the collections with lengths"
    ]
@@ -1096,7 +1277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether both given values point to the same memory location or \n",
+    "45.WAP to check whether both given values point to the same memory location or \n",
     "not. if it is true print the middle item of the second collection, or else if it is false \n",
     "print the first item and last item of the first collection along with the memory \n",
     "address."
@@ -1106,7 +1287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given string collection is more than ten, and the first + \n",
+    "46.WAP to check whether a given string collection is more than ten, and the first + \n",
     "last character of the ascii values should be divisible by 5, if condition is satisfied \n",
     "print first, middle, last characters ASCII values or else print the string three \n",
     "times.\n"
@@ -1116,7 +1297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the middle of the item present in the list is string data type \n",
+    "47.WAP to check whether the middle of the item present in the list is string data type \n",
     "or not if it is string print that list or else if it is not string then print that middle \n",
     "item"
    ]
@@ -1125,7 +1306,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the middle of the item present in the list is string data type \n",
+    "48.WAP to check whether the middle of the item present in the list is string data type \n",
     "or not if it is string print that list or else if it is not string then print that middle \n",
     "item"
    ]
@@ -1134,7 +1315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to find out such numbers which are divisible by 7 but are not a \n",
+    "49.Write a program to find out such numbers which are divisible by 7 but are not a \n",
     "multiple of 5. Both the conditional is satisfied and print actual value. if one \n",
     "condition is not satisfied actual number is multiply by 4 and print result"
    ]
@@ -1143,7 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether two values are pointing to the same memory address or \n",
+    "50.WAP to check whether two values are pointing to the same memory address or \n",
     "not. If the same memory displays the address or else displays the two values \n",
     "addresses."
    ]
@@ -1152,7 +1333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether a given input character is a special symbol or not if it is a \n",
+    "51.WAP to check whether a given input character is a special symbol or not if it is a \n",
     "special symbol then print that character three times and tell print that character \n",
     "5 times."
    ]
@@ -1161,7 +1342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check length of both string collections equal or not if it is equal print the \n",
+    "52.WAP to check length of both string collections equal or not if it is equal print the \n",
     "connection of any one of the collections if it is not equal print both the collection.\n"
    ]
   },
@@ -1169,7 +1350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP To check whether both input variables point to the same memory location \n",
+    "53.WAP To check whether both input variables point to the same memory location \n",
     "or not if it is true print the last item of the second collection, if it is false print the \n",
     "first item of the first collection along with the memory address.\n"
    ]
@@ -1178,7 +1359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to print the string collection five times when the length of the string \n",
+    "54.WAP to print the string collection five times when the length of the string \n",
     "collection should be more than 3 and the middle character of the string should \n",
     "be vowel and the first character ASCII value should be even, to print the previous \n",
     "character of middle character, or else if ASCII value is odd then print the string \n",
@@ -1189,7 +1370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ravi would like to buy a new cello or red pen. The cost of the pen should be 10. \n",
+    "55.Ravi would like to buy a new cello or red pen. The cost of the pen should be 10. \n",
     "If the pen is available in the shop, he will buy the pen. If it is not there he will \n",
     "come out of the shop."
    ]
@@ -1198,7 +1379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to perform addition and subtraction operation by using list collection if the \n",
+    "56.WAP to perform addition and subtraction operation by using list collection if the \n",
     "first and middle data items number are even performing addition operation, or \n",
     "else performing subtraction.\n"
    ]
@@ -1207,7 +1388,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WAP to check whether the first item of these two lists is either integer or not. \n",
+    "57.WAP to check whether the first item of these two lists is either integer or not. \n",
     "If it is an integer, concatenate these two lists or else print the memory \n",
     "address of these two lists."
    ]
@@ -1236,6 +1417,36 @@
     "a=66\n",
     "if type(a) in (int,float,bytes,complex):\n",
     "    print('gfkfhgf')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to check value + or -\n",
+    "# and check even or not , if even didplay half value , if odd display sqaure of given value\n",
+    "# if -ve value display absolute value\n",
+    "a=-30\n",
+    "if a>0:\n",
+    "    if a%2==0:\n",
+    "        print(a//2)\n",
+    "    elif a%2!=0:\n",
+    "        print(a**2)\n",
+    "\n",
+    "else:\n",
+    "    print(-a)\n",
+    "    print(abs(a)) #abs(): absolute function."
    ]
   }
  ],
