--- a/Qns&Anwrs/nested_if.ipynb
+++ b/Qns&Anwrs/nested_if.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -33,14 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A\n"
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[117], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[39mprint\u001b[39m(n)\n\u001b[0;32m     19\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m         a\u001b[39m=\u001b[39m{\u001b[39mtuple\u001b[39;49m(a)}\n\u001b[0;32m     21\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mset\u001b[39m(\u001b[39mtuple\u001b[39m(a)))\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
@@ -50,39 +54,39 @@
     "#if given caracter is ascii number, store ascii caracter and ascii value in string\n",
     "# if special character display previous given and next character\n",
     "#if not a special charecter store the value inside the set\n",
-    "a='a'\n",
-    "\n",
-    "if type(a)==str and len(a)==1 and 'a'<=a<='z' or 'A'<=a<='Z':\n",
-    "    if 'A'<=a<='Z':\n",
-    "        print(chr(ord(a)+32))\n",
-    "    elif 'a'<=a<='z': #or else: block\n",
-    "        print(chr(ord(a)-32))\n",
-    "elif type(a)==str and len(a)==1 and'0'<=a<='9':\n",
-    "    n=a+str(ord(a))\n",
-    "    print(n)\n",
-    "else:\n",
-    "    if type(a)==str and len(a)==1 and not('a'<=a<='z' or 'A'<=a<='Z' or '0'<=a<='9'):\n",
+    "a=44\n",
+    "if type(a)==str and len(a)==1:\n",
+    "    if type(a)==str and len(a)==1 and 'a'<=a<='z' or 'A'<=a<='Z':\n",
+    "         if 'A'<=a<='Z':\n",
+    "          print(chr(ord(a)+32))\n",
+    "         elif 'a'<=a<='z': #or else: block\n",
+    "          print(chr(ord(a)-32))\n",
+    "    elif type(a)==str and len(a)==1 and'0'<=a<='9':\n",
+    "         n=a+str(ord(a))\n",
+    "         print(n)\n",
+    "    else:\n",
     "        n=chr(ord(a)-1)+a+chr(ord(a)+1)\n",
     "        print(n)\n",
-    "    else:\n",
-    "        print(set(a))\n"
+    "else:\n",
+    "        a={tuple(a)}\n",
+    "        print(set(tuple(a)))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(77,)}\n"
+      "{(787, 999)}\n"
      ]
     }
    ],
    "source": [
-    "ch={77:88} #sir\n",
+    "ch=(787,999) #sir\n",
     "s=''\n",
     "d=set()\n",
     "if type(ch)==str and len(ch)==1:\n",
@@ -99,7 +103,7 @@
     "    else:\n",
     "        print(chr(ord(ch)-1),ch,chr(ord(ch)+1))\n",
     "else:\n",
-    "    if type(ch) in [list,tuple,set,dict]:\n",
+    "    if type(ch) in [list,set,dict]: #[list,tuple,set,dict]\n",
     "        d|={tuple(ch)}\n",
     "        print(d)\n",
     "    else:\n",
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +123,7 @@
     "#if collection is dict, modify the first dict by the help of  second dict witought changinge the fist dict address\n",
     "# if both collection are not same concate both the collection\n",
     "# if both are numbers perform multiplication\n",
-    "#if any of value if bool or None , convert to string\n",
+    "#if any of value is bool or None , convert to string\n",
     "#if both values are complex , extract only imaginary value and store in complex.\n",
     "# if both values are in bytes display the ascii value without ord()\n",
     "#"
@@ -127,19 +131,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NoneNone\n"
+      "Nonesdssds\n"
      ]
     }
    ],
    "source": [
-    "a=None;b=None\n",
+    "a=None;b='sdssds'\n",
     "if type(a)==type(b) in[str,list,tuple,set,dict]:\n",
     "    if type(a)==list:\n",
     "        a+=b\n",
@@ -161,9 +165,10 @@
     "    else:\n",
     "        c=complex(a.imag,b.imag)\n",
     "        print(c)\n",
-    "elif type(a)in[bool,type(None)] or type(b)in[bool,type(None)]:\n",
-    "    s=str(a)+str(b)\n",
-    "    print(s)\n",
+    "#elif type(a)in[bool,type(None)] or type(b)in[bool,type(None)]:\n",
+    "#   s=str(a)+str(b)\n",
+    "#   print(s)'''\n",
+    "\n",
     "else:\n",
     "    s=str(a)+str(b)\n",
     "    print(s)\n",
@@ -176,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
