--- a/Qns&Anwrs/nested_if.ipynb
+++ b/Qns&Anwrs/nested_if.ipynb
@@ -33,18 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[117], line 20\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[39mprint\u001b[39m(n)\n\u001b[0;32m     19\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m         a\u001b[39m=\u001b[39m{\u001b[39mtuple\u001b[39;49m(a)}\n\u001b[0;32m     21\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mset\u001b[39m(\u001b[39mtuple\u001b[39m(a)))\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(33, 54)}\n"
      ]
     }
    ],
@@ -54,7 +50,7 @@
     "#if given caracter is ascii number, store ascii caracter and ascii value in string\n",
     "# if special character display previous given and next character\n",
     "#if not a special charecter store the value inside the set\n",
-    "a=44\n",
+    "a=[33,54]\n",
     "if type(a)==str and len(a)==1:\n",
     "    if type(a)==str and len(a)==1 and 'a'<=a<='z' or 'A'<=a<='Z':\n",
     "         if 'A'<=a<='Z':\n",
@@ -68,8 +64,12 @@
     "        n=chr(ord(a)-1)+a+chr(ord(a)+1)\n",
     "        print(n)\n",
     "else:\n",
-    "        a={tuple(a)}\n",
-    "        print(set(tuple(a)))\n"
+    "       if type(a) in[list,set,dict]:\n",
+    "          a={tuple(a)}\n",
+    "          print(a)\n",
+    "       else:\n",
+    "          a={a}\n",
+    "          print(set(tuple(a)))\n"
    ]
   },
   {
